bin_PROGRAMS = imanes

imanes_SOURCES = \
     cnrom.c \
     cpu.c \
     imaconfig.c \
     instruction_set.c \
     loop.c \
     main.c \
     mapper.c \
     mmc1.c \
     mmc3.c \
     nrom.c \
     pad.c \
     palette.c \
     parse_file.c \
     ppu.c \
     screen.c \
     sram.c \
     states.c \
     unrom.c

imanes_LDFLAGS = -lrt

AM_CPPFLAGS = -I$(top_srcdir)/include -Wall -O3
