bin_PROGRAMS = imanes

imanes_SOURCES = \
     cnrom.c \
     common.c \
     cpu.c \
     gui.c \
     imaconfig.c \
     instruction_set.c \
     loop.c \
     main.c \
     mapper.c \
     mmc1.c \
     mmc3.c \
     nrom.c \
     pad.c \
     palette.c \
     parse_file.c \
     platform.c \
     ppu.c \
     screen.c \
     screenshot.c \
     sram.c \
     states.c \
     unrom.c

AM_CPPFLAGS = -I$(top_srcdir)/include -Wall -O3 -pedantic
